<resources>
    <string name="app_name">Yapp</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="birth_date">Birth Date</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="school">School</string>
    <string name="course">Course</string>
    <string name="payment_type">Payment Type</string>
    <string name="register_date">Register Date</string>
    <string name="active">Active</string>
    <string name="reason">Reason</string>
    <string name="sessions_finished">Sessions finished</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="select_patient">Select Patient</string>
    <string name="select_specialist">Select Specialist</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="select_start_date">Select start date</string>
    <string name="rol">Rol</string>
    <string name="specialist_type">Specialist Type</string>
    <string name="collegiate_number">Collegiate Number</string>
    <string name="patient_with_two_points">Patient: </string>
    <string name="user">USER</string>
    <string name="treatments">Treatments</string>
    <string name="center">Clinic</string>
    <string name="reports">Reports</string>
    <string name="mts">MTS</string>
    <string name="patients">Patients</string>
    <string name="users">Users</string>
    <string name="recipe">Recipe</string>
    <string name="patient_name">Patient name:</string>
    <string name="start_date_two_points">Start date:</string>
    <string name="treatment_n">Treatment nº:</string>
    <string name="mts_n">Mts nº:</string>
    <string name="date">Date:</string>
    <string name="select_mts_date">Select Mts date</string>
    <string name="clinic_name">Clinic name</string>
    <string name="welcome_to_yapp">Welcome to YAPP</string>
    <string name="continue_btn">Continue</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register">Register</string>
    <string name="clinic_address">Clinic address</string>
    <string name="clinic_phone_number">Clinic phone number</string>
    <string name="admin_data">Admin data</string>
    <string name="clinic_data">Clinic data</string>
    <string name="new_password">New password</string>
    <string name="welcome_yapp_paragraph">YAPP is an free application that allows you to manage your clinic.</string>
    <string name="welcome_yapp_paragraph_2">To start with your management, you must insert the data of your clinic and create a user with an administrator role.</string>
    <string name="press_the_button_bellow_to_start">Press the button bellow to start.</string>
    <string name="id">User id:</string>
    <string name="name_user_item">Name:</string>
    <string name="specialist_type_user_item_list">Specialist:</string>
    <string name="rol_user_item_list">Rol:</string>
    <string name="username_user_list_item">Username:</string>
    <string name="surname_user_item_list">Surname:</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="diagnosis_item_list">Diagnosis: </string>
    <string name="objetives">Objetives</string>
    <string name="error_saving">Error saving data</string>
    <string name="error_deleting">Error deleting data</string>
    <string name="must_fill">Must be filled</string>
    <string name="length_pass">Passwords must have at least 6 characters</string>
    <string name="equal_pass">Both password-fields are not equal</string>
    <string name="phone_length">Phone number must have 9 characters</string>
    <string name="invalid_mail">Invalid email</string>
    <string name="select_treatment">Select Treatment</string>
    <string name="deleteButton">Delete</string>
    <string name="date_clean">Date</string>
    <string name="patient">Patient</string>
    <string name="specialist">Specialist</string>
    <string name="treatment">Treatment</string>
    <string name="start_date">Start Date</string>
    <string name="clinic_email">Clinic email</string>
    <string name="ok">ok</string>
    <string name="check_email">Please, check your email and verify your account</string>
    <string name="thanks_for_joining">Thanks for joining YAPP</string>
    <string name="caution">CAUTION!</string>
    <string name="sure">Do you want delete this patient? Are you sure?</string>
    <string name="sure_report">Do you want delete this report? Are you sure?</string>
    <string name="sure_treatment">Do you want delete this treatment? Are you sure?</string>
    <string name="sure_mts">Do you want delete this Mts? Are you sure?</string>
    <string name="sure_user">Do you want delete this user? Are you sure?</string>
    <string name="back">Back</string>
    <string name="search_patient">Search patient by name</string>
    <string name="search_report">Search report by patient name</string>
    <string name="search_treatment">Search treatment by patient name</string>
    <string name="search_user">Search user by name or specialist type</string>
    <string name="edit">Edit</string>
    <string name="bad_credentials">Error! Bad credentials</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="data_saved">Data saved</string>
    <string name="error_data">Error saving data</string>
    <string name="must_be_admin_to_edit">You must be an admin to edit this</string>
    <string name="today">Today</string>
    <string name="three_days">Three Days</string>
    <string name="week">Week</string>
    <string name="treatment_list">Treatment list</string>
    <string name="patient_list">Patient list</string>
    <string name="user_list">User list</string>
    <string name="report_list">Report list</string>
    <string name="mts_list">Mts list</string>
    <string name="update_profile">Update profile</string>
    <string name="mts_">Medical Technical Sheet</string>
    <string name="report">Report</string>
    <string name="select_user">Select User</string>
    <string name="mts_calendar">Mts Calendar</string>
    <string name="loading">Loading…</string>

    <string-array name="payment_types">
        <item>Fee</item>
        <item>Scholarship</item>
        <item>Session</item>
    </string-array>

    <string-array name="rol_types">
        <item>Admin</item>
        <item>User</item>
    </string-array>

    <string-array name="specialist_types">
        <item>Speech therapist</item>
        <item>Pedagogue</item>
        <item>Psychologist</item>
        <item>None</item>
    </string-array>
</resources>