<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.forms.RegisterFormFragment"
    android:background="@color/white">



    <ScrollView
        android:id="@+id/scrollView"
        style="@style/ScrollViewForms"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/profile_image">


            <TextView
                android:id="@+id/adminDataTextView"
                style="@style/RegisterFormFragmentTitles"
                android:text="@string/admin_data"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userNameInputLayoutRegister"
                style="@style/TextInputStyle"
                android:hint="@string/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/adminDataTextView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userNameEditTextRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayoutRegister"
                style="@style/TextInputStyle"
                android:hint="@string/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNameInputLayoutRegister">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditTextRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/repeatPasswordInputLayoutRegister"
                style="@style/TextInputStyle"
                android:hint="@string/repeat_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordInputLayoutRegister">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/repeatPasswordEditTextRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInputLayoutRegister"
                style="@style/TextInputStyle"
                android:layout_marginTop="0dp"
                android:hint="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/repeatPasswordInputLayoutRegister">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditTextRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surnameInputLayoutRegister"
                style="@style/TextInputStyle"
                android:hint="@string/surname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameInputLayoutRegister">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surnameEditTextRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneInputLayoutRegister"
                style="@style/TextInputStyle"
                android:hint="@string/phone_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/surnameInputLayoutRegister">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneEditTextRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayoutRegister"
                style="@style/TextInputStyle"
                android:hint="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneInputLayoutRegister">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditTextRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/specialistTypeInputLayoutRegister"
                style="@style/DropDownOptionForms"
                android:hint="@string/specialist_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailInputLayoutRegister">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteSpecialistRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/collegiateNumberInputLayoutRegister"
                style="@style/TextInputStyle"
                android:hint="@string/collegiate_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/specialistTypeInputLayoutRegister">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/collegiateNumberEditTextRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/clinicDataTextView"
                style="@style/RegisterFormFragmentTitles"
                android:text="@string/clinic_data"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/collegiateNumberInputLayoutRegister" />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameClinicInputLayoutRegister"
                style="@style/TextInputStyle"
                android:hint="@string/clinic_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clinicDataTextView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameClinicEditTextRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressClinicInputLayoutRegister"
                style="@style/TextInputStyle"
                android:hint="@string/clinic_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameClinicInputLayoutRegister">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressClinicEditTextRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneClinicInputLayoutRegister"
                style="@style/TextInputStyle"
                android:hint="@string/clinic_phone_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addressClinicInputLayoutRegister">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneClinicEditTextRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>



<!--            <com.google.android.material.button.MaterialButton-->
<!--                android:id="@+id/cancelClinicButtonRegister"-->
<!--                style="@style/CancelButton"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="20dp"-->
<!--                app:layout_constraintBottom_toTopOf="@+id/saveClinicButtonRegister"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/phoneClinicInputLayoutRegister"/>-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveClinicButtonRegister"
                style="@style/SaveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneClinicInputLayoutRegister" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>