<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="20dp"
    tools:context=".fragments.forms.MtsFormFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPatientMts"
        style="@style/TextInputStyleBlocked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/patient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patientMtsEditText"
            style="@style/TextInputEditBlocked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSpecialistMts"
        style="@style/TextInputStyleBlocked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/specialist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPatientMts">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/specialistMtsEditText"
            style="@style/TextInputEditBlocked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDateMts"
        style="@style/TextInputStyleBlocked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_clean"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSpecialistMts">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateMtsEditText"
            style="@style/TextInputEditBlocked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reasonMtsInputLayout"
        style="@style/TextInputStyleBlocked"
        android:hint="@string/treatment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDateMts">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mtsReasonEditText"
            style="@style/TextInputEditBlocked"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:lines="5" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/editSwitchMts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reasonMtsInputLayout"
        app:useMaterialThemeColors="false" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelMtsButton"
        style="@style/CancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/saveMtsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveMtsButton"
        style="@style/SaveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>