<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TreatmentFormFragment">


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/simpleSwitch"
        style="@style/SwitchTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"

        android:text="@string/active"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:useMaterialThemeColors="false" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reasonInputLayout"
        style="@style/TextInputStyle"
        android:hint="@string/reason"
        app:boxBackgroundColor="@color/white"
        app:endIconCheckable="true"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/blue_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simpleSwitch">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textMultiLine"
            android:lines="4"
            android:id="@+id/treatmentReasonEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sessionsInputLayout"
        style="@style/TextInputStyle"
        android:hint="@string/sessions_finished"
        app:boxBackgroundColor="@color/white"
        app:endIconCheckable="true"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/blue_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reasonInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sessionsEditText"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>